--- a/tppcompiler/01-compiladores-analise-lexica-tpplex.ipynb
+++ b/tppcompiler/01-compiladores-analise-lexica-tpplex.ipynb
@@ -23,7 +23,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.6"
+      "version": "3.9.2-final"
     }
   },
   "cells": [
@@ -177,18 +177,18 @@
         "    # operadores binarios\n",
         "    \"MAIS\",  # +\n",
         "    \"MENOS\",  # -\n",
-        "    \"MULTIPLICACAO\",  # *\n",
-        "    \"DIVISAO\",  # /\n",
-        "    \"E_LOGICO\",  # &&\n",
-        "    \"OU_LOGICO\",  # ||\n",
-        "    \"DIFERENCA\",  # <>\n",
+        "    \"VEZES\",  # *\n",
+        "    \"DIVIDE\",  # /\n",
+        "    \"E\",  # &&\n",
+        "    \"OU\",  # ||\n",
+        "    \"DIFERENTE\",  # <>\n",
         "    \"MENOR_IGUAL\",  # <=\n",
         "    \"MAIOR_IGUAL\",  # >=\n",
         "    \"MENOR\",  # <\n",
         "    \"MAIOR\",  # >\n",
         "    \"IGUAL\",  # =\n",
         "    # operadores unarios\n",
-        "    \"NEGACAO\",  # !\n",
+        "    \"NAO\",  # !\n",
         "    # simbolos\n",
         "    \"ABRE_PARENTESE\",  # (\n",
         "    \"FECHA_PARENTESE\",  # )\n",
@@ -276,8 +276,8 @@
         "# Símbolos.\n",
         "t_MAIS = r'\\+'\n",
         "t_MENOS = r'-'\n",
-        "t_MULTIPLICACAO = r'\\*'\n",
-        "t_DIVISAO = r'/'\n",
+        "t_VEZES = r'\\*'\n",
+        "t_DIVIDE = r'/'\n",
         "t_ABRE_PARENTESE = r'\\('\n",
         "t_FECHA_PARENTESE = r'\\)'\n",
         "t_ABRE_COLCHETE = r'\\['\n",
@@ -287,12 +287,12 @@
         "t_DOIS_PONTOS = r':'\n",
         "\n",
         "# Operadores Lógicos.\n",
-        "t_E_LOGICO = r'&&'\n",
-        "t_OU_LOGICO = r'\\|\\|'\n",
-        "t_NEGACAO = r'!'\n",
+        "t_E = r'&&'\n",
+        "t_OU = r'\\|\\|'\n",
+        "t_NAO = r'!'\n",
         "\n",
         "# Operadores Relacionais.\n",
-        "t_DIFERENCA = r'<>'\n",
+        "t_DIFERENTE = r'<>'\n",
         "t_MENOR_IGUAL = r'<='\n",
         "t_MAIOR_IGUAL = r'>='\n",
         "t_MENOR = r'<'\n",
@@ -510,24 +510,25 @@
       "source": [
         "! wget https://raw.githubusercontent.com/rogerioag/tutorial-de-compiladores/master/tppcompiler/tpplex.py"
       ],
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--2021-03-10 20:32:18--  https://raw.githubusercontent.com/rogerioag/tutorial-de-compiladores/master/tppcompiler/tpplex.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 4628 (4.5K) [text/plain]\n",
-            "Saving to: ‘tpplex.py’\n",
+            "--2021-03-10 19:12:51--  https://raw.githubusercontent.com/rogerioag/tutorial-de-compiladores/master/tppcompiler/tpplex.py\n",
+            "Carregou certificado CA \"/etc/ssl/certs/ca-certificates.crt\"\n",
+            "Resolvendo raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Conectando-se a raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... conectado.\n",
+            "A requisição HTTP foi enviada, aguardando resposta... 200 OK\n",
+            "Tamanho: 4661 (4,6K) [text/plain]\n",
+            "Salvando em: “tpplex.py.1”\n",
             "\n",
-            "\rtpplex.py             0%[                    ]       0  --.-KB/s               \rtpplex.py           100%[===================>]   4.52K  --.-KB/s    in 0s      \n",
+            "tpplex.py.1         100%[===================>]   4,55K  --.-KB/s    em 0s      \n",
             "\n",
-            "2021-03-10 20:32:18 (55.6 MB/s) - ‘tpplex.py’ saved [4628/4628]\n",
+            "2021-03-10 19:12:52 (37,4 MB/s) - “tpplex.py.1” salvo [4661/4661]\n",
             "\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -543,130 +544,14 @@
       "source": [
         "!python tpplex.py teste.tpp"
       ],
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "INTEIRO\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "ABRE_COLCHETE\n",
-            "NUM_INTEIRO\n",
-            "FECHA_COLCHETE\n",
-            "FLUTUANTE\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "INTEIRO\n",
-            "ID\n",
-            "ABRE_PARENTESE\n",
-            "INTEIRO\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "VIRGULA\n",
-            "FLUTUANTE\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "INTEIRO\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "SE\n",
-            "ABRE_PARENTESE\n",
-            "ID\n",
-            "MAIOR\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "ENTAO\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "ID\n",
-            "MAIS\n",
-            "ID\n",
-            "SENAO\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "ID\n",
-            "MULTIPLICACAO\n",
-            "ID\n",
-            "FIM\n",
-            "RETORNA\n",
-            "ABRE_PARENTESE\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "FIM\n",
-            "ID\n",
-            "ABRE_PARENTESE\n",
-            "INTEIRO\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "VIRGULA\n",
-            "FLUTUANTE\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "ID\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "ID\n",
-            "FIM\n",
-            "INTEIRO\n",
-            "ID\n",
-            "ABRE_PARENTESE\n",
-            "FECHA_PARENTESE\n",
-            "INTEIRO\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "VIRGULA\n",
-            "ID\n",
-            "FLUTUANTE\n",
-            "DOIS_PONTOS\n",
-            "ID\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "NUM_INTEIRO\n",
-            "MAIS\n",
-            "NUM_INTEIRO\n",
-            "LEIA\n",
-            "ABRE_PARENTESE\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "LEIA\n",
-            "ABRE_PARENTESE\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "NUM_PONTO_FLUTUANTE\n",
-            "MAIS\n",
-            "NUM_PONTO_FLUTUANTE\n",
-            "ID\n",
-            "ABRE_PARENTESE\n",
-            "NUM_INTEIRO\n",
-            "VIRGULA\n",
-            "NUM_PONTO_FLUTUANTE\n",
-            "FECHA_PARENTESE\n",
-            "ID\n",
-            "ATRIBUICAO\n",
-            "ID\n",
-            "ABRE_PARENTESE\n",
-            "ID\n",
-            "VIRGULA\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "ESCREVA\n",
-            "ABRE_PARENTESE\n",
-            "ID\n",
-            "FECHA_PARENTESE\n",
-            "RETORNA\n",
-            "ABRE_PARENTESE\n",
-            "NUM_INTEIRO\n",
-            "FECHA_PARENTESE\n",
-            "FIM\n"
-          ],
-          "name": "stdout"
+            "INTEIRO\nDOIS_PONTOS\nID\nABRE_COL\nNUM_INTEIRO\nFECHA_COL\nFLUTUANTE\nDOIS_PONTOS\nID\nINTEIRO\nID\nABRE_PAR\nINTEIRO\nDOIS_PONTOS\nID\nVIRGULA\nFLUTUANTE\nDOIS_PONTOS\nID\nFECHA_PAR\nINTEIRO\nDOIS_PONTOS\nID\nSE\nABRE_PAR\nID\nMAIOR\nID\nFECHA_PAR\nENTAO\nID\nATRIBUICAO\nID\nADICAO\nID\nSENAO\nID\nATRIBUICAO\nID\nMULTIPLICACAO\nID\nFIM\nRETORNA\nABRE_PAR\nID\nFECHA_PAR\nFIM\nID\nABRE_PAR\nINTEIRO\nDOIS_PONTOS\nID\nVIRGULA\nFLUTUANTE\nDOIS_PONTOS\nID\nFECHA_PAR\nID\nATRIBUICAO\nID\nID\nATRIBUICAO\nID\nFIM\nINTEIRO\nID\nABRE_PAR\nFECHA_PAR\nINTEIRO\nDOIS_PONTOS\nID\nVIRGULA\nID\nFLUTUANTE\nDOIS_PONTOS\nID\nID\nATRIBUICAO\nNUM_INTEIRO\nADICAO\nNUM_INTEIRO\nLEIA\nABRE_PAR\nID\nFECHA_PAR\nLEIA\nABRE_PAR\nID\nFECHA_PAR\nID\nATRIBUICAO\nNUM_PONTO_FLUTUANTE\nADICAO\nNUM_PONTO_FLUTUANTE\nID\nABRE_PAR\nNUM_INTEIRO\nVIRGULA\nNUM_PONTO_FLUTUANTE\nFECHA_PAR\nID\nATRIBUICAO\nID\nABRE_PAR\nID\nVIRGULA\nID\nFECHA_PAR\nESCREVA\nABRE_PAR\nID\nFECHA_PAR\nRETORNA\nABRE_PAR\nNUM_INTEIRO\nFECHA_PAR\nFIM\n"
+          ]
         }
       ]
     },
